# domparser

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  domparser.js  index.d.ts  index.js  package.json  patch.d.ts
.github/workflows/: CI.yml
.husky/: pre-commit
benchmark/: benchmark.mjs  domparser.mjs
crates/domparser/: Cargo.toml  README.md
crates/domparser_napi/: Cargo.toml  index.d.ts  index.js
crates/domparser_napi/src/: lib.rs  serializer.rs
crates/domparser_napi/src/node_repr/: mod.rs  modify.rs  properties.rs  query.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: postbuild.js
test/: chardata_ns.spec.mjs  classlist_dataset.spec.mjs  domparser.spec.mjs  index.spec.mjs  insert_normalize.spec.mjs  more_apis.spec.mjs  more_else.spec.mjs  more_nodes.spec.mjs  selectors_namespace.spec.mjs
(+5 files in other folders)
